# osc-shell

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: main.yml
etc/: osc-shell.service
src/: main.rs
